fixed white spaces and added font to button

--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,7 @@
 }
 
 .button {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     background-color: pink;
     border: 2px solid white;
     top: 250px;
